# discord-bot

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: build_docker_image.yml
configs/: hafmc.toml  ssstano.toml
docker/: build.dockerfile
scripts/: env.sh  start_app.sh  start_scheduler.sh  start_web_app.sh  start_worker.sh
src/: config.py  config.rs  main.py  main.rs
src/applications/common/domain/: auth.py  streamers.py  users.py
src/applications/common/repositories/: base.py  streamers.py  users.py
src/applications/games_list/: __main__.py  discord.py
src/applications/schedule_sync/: comparators.py  synchronizer.py  tasks.py
src/applications/schedule_sync/activities/: __init__.py  sync.py
src/applications/schedule_sync/workflows/: __init__.py  sync.py
src/applications/scheduler_sync/: comparators.py  tasks.py
src/applications/stream_notifications/: __init__.py  messages_proc.py  sent_notifications.py  tasks.py
src/applications/stream_notifications/twitch/: token_storage.py
src/applications/temporal_worker/: __main__.py  queues.py
src/applications/twitch_webhook/: __main__.py  messages_proc.py  notification.py  reward_redemption.py  tasks.py  watcher.py
src/applications/twitch_webhook/activities/: __init__.py  message_proc.py  on_state_change.py  redemption_reward.py  state_checker.py
src/applications/twitch_webhook/twitch/: webhook.py
src/applications/twitch_webhook/workflows/: __init__.py  checker.py  on_channel_update.py  on_message.py  on_reward_redemption.py  on_stream_online.py
src/applications/web_app/frontend/: index.css  index.html
src/applications/web_app/utils/: static.py
src/core/: broker.py  config.py  mongo.py  redis.py  temporal.py
src/discord_handler/: mod.rs
src/domain/: streamers.py
src/handler/: mod.rs
src/modules/: tasks.py
src/modules/games_list/: __init__.py  discord.py  games_list.py
src/modules/scheduler_sync/: __init__.py  discord_events.py  synchronizer.py  tasks.py  twitch_events.py
src/modules/scheduler_sync/tasks/: __init__.py  sync.py
src/modules/stream_notifications/: __init__.py  messages_proc.py  notification.py  reward_redemption.py  sent_notifications.py  state.py  tasks.py  watcher.py
src/modules/stream_notifications/twitch/: authorize.py  token_storage.py  twitch.py  webhook.py
src/modules/web_app/: app.py
src/modules/web_app/auth/: authx.py
src/modules/web_app/frontend/: index.css  index.html  index.js
src/modules/web_app/serializers/: auth.py  streamer.py
src/modules/web_app/views/: __init__.py  auth.py  streamer.py
src/notifiers/: discord.rs  mod.rs  telegram.rs
src/repositories/: base.py  streamers.py  users.py
src/services/: discord.py  games_list.py  notification.py  twitch.py  twitch_state.py
src/services/scheduler_sync/: __init__.py  comparators.py  discord_events.py  synchronizer.py  twitch_events.py
src/services/twitch/: token_storage.py  twitch.py
src/twitch_handler/: auth.rs  chat.rs  eventsub.rs  helix.rs  mod.rs
(+5 files in other folders)
