[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "time"] }
serenity = { version = "0.12.1", features = ["collector"] }
reqwest = { version = "0.12.5", features = ["json"] }
chrono = "0.4.38"
futures = "0.3.30"
serde = "1.0.204"
serde_json = "1.0.122"
anyhow = "1.0.86"
async-trait = "0.1.81"
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-native-roots"] }
