[project]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = [{ name = "Bulat Kurbanov", email = "kurbanovbul@gmail.com" }]
requires-python = "~=3.11"
dependencies = [
    "discord-py>=2.4.0,<3",
    "twitchapi>=4.4.0,<5",
    "pydantic>=2.10.5,<3",
    "pydantic-settings>=2.7.1,<3",
    "httpx>=0.28.1,<0.29",
    "icalendar>=6.1.0,<7",
    "pytz~=2025.2",
    "mongojet>=0.3,<0.4",
    "taskiq>=0.11.11,<0.12",
    "taskiq-redis>=1.0.2,<2",
    "redis[hiredis]>=5.2.1,<6",
    "fastapi>=0.115.8,<0.116",
    "authx>=1.4.1,<2",
    "httpx-oauth>=0.16.1,<0.17",
    "uvicorn[standard]>=0.34.0,<0.35",
    "temporalio>=1.10.0",
]

[tool.hatch.build.targets.sdist]
include = ["discord_bot"]

[tool.hatch.build.targets.wheel]
include = ["discord_bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
